misc/populous-aws/deploy-datagen.yml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: datagen
  labels:
    app: datagen
    db: dgdb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: datagen
      db: dgdb
  template:
    metadata:
      labels:
        app: datagen
        db: dgdb
    spec:
      containers:
        - image: mariadb:latest
          name: mariadb
          ports:
            - containerPort: 3306
              name: dgdb
        - image: mvisonneau/generatedata
          name: datagen
          ports:
            - containerPort: 80
              name: datagen
---
apiVersion: v1
kind: Service
metadata:
  name: dgdb
spec:
  selector:
    db: dgdb
  ports:
  - name: dgdb
    protocol: TCP
    port: 3306
---
apiVersion: v1
kind: Service
metadata:
  name: datagen
spec:
  selector:
    app: datagen
  ports:
  - name: datagen
    port: 80
